# pyscim

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
src/scim/: config.py  dependencies.py  exceptions.py  main.py
src/scim/api/v2/: groups.py  resource_types.py  router.py  schemas.py  service_provider_config.py  users.py
src/scim/cli/: application.py  main.py  manage_tokens.py  tenant.py
src/scim/middleware/: __init__.py  auth.py  error_handler.py  request_logger.py
src/scim/models/: __init__.py  application.py  group.py  metadata.py  tenant.py  user.py
src/scim/schemas/: __init__.py  base.py  bulk.py  error.py  group.py  meta.py  user.py
src/scim/services/: __init__.py  application.py  group_service.py  tenant.py  user_service.py
src/scim/utils/: __init__.py  attribute_filter.py  etag.py  filter_parser.py  logging.py  pagination.py  scim_path_parser.py  tenant_context.py
supabase/: config.toml
supabase/migrations/: 20250711110239_initial_migration.sql
supabase/schemas/: 00-globals.sql  01-scim_tenants.sql  02-scim_applications.sql  03-scim_users.sql  04-scim_groups.sql  05-scim_metadata.sql
tests/: conftest.py  test_attribute_filter.py  test_endpoints.py
